--- a/123/Valve.html
+++ b/123/Valve.html
@@ -98,7 +98,7 @@ transition: .4s;
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
           <li class="nav-item active">
-              <a href="12.html" class="nav-link active" > <h6>  Головна</h6></a>
+              <a href="index.html" class="nav-link active" > <h6>  Головна</h6></a>
               </li>
               
               <li class="nav-item ">
