--- a/123/Blizzard.html
+++ b/123/Blizzard.html
@@ -82,8 +82,7 @@ body{
         </ol>
         <div class="carousel-inner ">
           <div class="carousel-item active" >
-            <img src="blizzard.png
-            " class="d-block w-100" alt="...">
+            <img src="ww.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block hh">
               <h5>Blizzard</h5>
               <p>Американська компанія</p>
