--- a/123/rock star games.html
+++ b/123/rock star games.html
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a href="12.html" class="nav-link " > <h6>  Головна</h6></a>
+                <a href="index.html" class="nav-link " > <h6>  Головна</h6></a>
                 </li>
                 
                 <li class="nav-item ">
