--- a/bycicle/index.html
+++ b/bycicle/index.html
@@ -249,23 +249,24 @@ padding-bottom: 10px;
             </div>
 <div class="row">
     <div class="col">
-        <h2 class="bold">Самый <span class="font-red">выгодный</span> и надежный способ продать авто - сделать это на <span class="font-red">Авторынке</span></h2>
+        <h2 class="bold">Чому <span class="font-red">потрібно</span> придбати велосипед?</span></h2>
     </div>
 </div>
 <div class="row">
     <div class="col-lg-4">
         <div class="my-card-2 my-card-21 sli">
-            <p class="ler">На авторынке вы не пользуетесь услугами перекупщиков, дилеров, интернет-площадок и аукционов. Торговля на авторынке — традиционный и проверенный способ, который предпочитают как продавцы, так и покупатели.</p>
+            <p class="ler">Одна з найважливіших причин того, що велосипеди кращі за машини - вони більш сприятливі до оточуючого середовища. </p>
         </div>
     </div>
     <div class="col-lg-4">
         <div class="my-card-2 my-card-22 sli">
-            <p class="ler" >Каждый, кто желает купить машину с пробегом, хочет лично увидеть транспортное средство, убедиться в его исправности и заявленных технических характеристиках. Авторынок — самое безопасное место для продаж автотранспорта.</p>
+            <p class="ler" >Коли Ви крутите педалі, Вам немає чого перейматися про гроші на бензин. Взагалі ніколи. Заряджати енергією потрібно лише своє тіло. </p>
         </div>
     </div>
     <div class="col-lg-4">
         <div class="my-card-2 my-card-23 sli">
-            <p class="ler">Авторынок — классическое, удобное и надежное место, где продавец и покупатель общаются напрямую, могут открыто продемонстрировать все преимущества автомобиля и за короткое время совершить сделку купли-продажи.</p>
+            <p class="ler">Користування велосипедами веде до знайомства з новими людьми. Ви можете зупинятися по дорозі і перемовлятись з людьми, що рідко вдається з вікна машини. У Вас є можливість приєднуватись до велоаматорів, їздити разом у походи і покатушки, приймати участь у велорухах і... знаходити нових друзів!
+            </p>
         </div>
     </div>
 </div>
@@ -297,10 +298,10 @@ padding-bottom: 10px;
         <h3 class="jea">Про нас:</h3>
         <p class="jea">Ми займаємося велосипедами уже 5 років.Можемо допомогти вам з моделю та деталями</p>
         <ul class="socials">
-              <a href="#" ><i class="fa fa-facebook"></i></a> 
-            <a href="#" class="te"><i class="fab fa-instagram-square"></i></a> 
-              <a href="#" class="te"><i class="fab fa-youtube-square"></i></a> 
-              <a href="#" class="te"><i class="fab fa-twitter"></i></a> 
+              <a href="https://uk-ua.facebook.com/lviv.used.bikes" ><i class="fa fa-facebook"></i></a> 
+            <a href="https://www.instagram.com/veloman_page/?hl=ru" class="te"><i class="fab fa-instagram-square"></i></a> 
+              <a href="https://www.youtube.com/watch?v=JLV6epByWeY" class="te"><i class="fab fa-youtube-square"></i></a> 
+              <a href="https://twitter.com/wunderbike_ua" class="te"><i class="fab fa-twitter"></i></a> 
         </ul>
     </div>
     <div class="footer-bottom">
