--- a/bycicle/index2.html
+++ b/bycicle/index2.html
@@ -164,9 +164,9 @@ img{
                         </div>
                         <div class="container">
                         <div class="row">
-                  <div class="col-md-4 col-sm-6"><a href="" class="border-button">Велосипеди Ardis</a></div>
-                  <div class="col-md-4 col-sm-6"><a href="" class="border-button">Велосипеди Haro</a></div>
-                  <div class="col-md-4 col-sm-6"><a href="" class="border-button">Велосипеди Cyclone</a></div>
+                  <div class="col-md-4 col-sm-6"><a href="https://ardis-velo.kiev.ua/?gclid=Cj0KCQjw8IaGBhCHARIsAGIRRYqk3HilGYUepragKRMYu-TlPWp8AZv5OKcQrSo-Bdt2RA2OnKCn60YaApO8EALw_wcB" class="border-button">Велосипеди Ardis</a></div>
+                  <div class="col-md-4 col-sm-6"><a href="http://harobikes.com.ua/bikes/haro" class="border-button">Велосипеди Haro</a></div>
+                  <div class="col-md-4 col-sm-6"><a href="https://velogo.com.ua/velo-cyclone" class="border-button">Велосипеди Cyclone</a></div>
                 </div>
                    </div> 
                         
